--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.11",
-    "react-router": "^5.1.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "react-router": "^5.1.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
